# foodo_chatbot

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
data/: manifest.toml
data/cuisines/american/: bbq_ribs.toml  buffalo_wings.toml  caesar_salad.toml  clam_chowder.toml  classic_burger.toml  cornbread.toml  jambalaya.toml  mac_and_cheese.toml  meatloaf.toml  pancakes.toml
data/cuisines/egyptian/: bamia.toml  falafel.toml  fattah.toml  ful_medames.toml  hawawshi.toml  kofta_meshweya.toml  koshari.toml  mahshi.toml  molokhia.toml  shakshuka.toml
data/cuisines/french/: beef_bourguignon.toml  bouillabaisse.toml  cassoulet.toml  coq_au_vin.toml  crepes.toml  croissant.toml  french_onion_soup.toml  nicoise_salad.toml  quiche_lorraine.toml  ratatouille.toml
data/cuisines/greek/: dolmades.toml  fasolada.toml  greek_salad.toml  gyros.toml  moussaka.toml  pastitsio.toml  souvlaki.toml  stifado.toml  (+2 more)
data/high_protein/: chicken_rice_bowl.toml  cottage_cheese_bowl.toml  egg_white_omelette.toml  greek_yogurt_protein_bowl.toml  protein_oatmeal.toml  protein_pancakes.toml  protein_smoothie.toml  tuna_wrap.toml
data/snacks/: apple_peanut_butter.toml  banana.toml  dates_almond_butter.toml  hummus_veggie_sticks.toml  mixed_berries.toml  protein_bar_homemade.toml  rice_cakes.toml  trail_mix.toml
foodo_chatbot/: __init__.py  container.py
foodo_chatbot/config/: settings.py
foodo_chatbot/domain/: entities.py  ports.py
foodo_chatbot/services/: chat_service.py
tests/integration/: test_container.py
tests/unit/: test_chat_service.py  test_entities.py
(+61 files in other folders)
