[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foodo-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
description = "Pluggable RAG chatbot module for foodo.ai"
dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pinecone>=5.3.1",
    "google-generativeai>=0.8.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
